/** @page apreq_changes CHANGES
@brief List of major changes.


@section v2_06 Changes with libapreq2-2.06


- Perl API [joes]
  Drop support for $req->env(), which also died with 2.05-dev.

- Perl API [joes]
  Support for table set/add/delete methods is formally withdrawn.
  Technically this feature died with the module API refactoring in
  2.05-dev.

- C API [max]
  Right-hand limit of apreq_brigade_move() is declared as "excluding",
  but APR_RING_UNSPLICE() wants an "including" right-hand limit. Fixed
  this by passing the previous bucket.

- Perl API [joes]
  Drop support for Apache2::Request::new's HOOK_DATA.
  UPLOAD_HOOK now takes only two arguments: ($upload, $data).

- Perl API [joes]
  Drop support for Apache2::Cookie::Jar::new's VALUE_CLASS.
  2.05-dev broke that API, and it's not worth trying to fix.
  People who need that should use APR::Request::Cookie::Table's
  cookie_class() API instead.

- Perl API [joes]
  Fix cookie domain/path munging in Apache2::Cookie::new().


@section v2_05_dev Changes with libapreq2-2.05-dev (released May 5, 2005)


- Win32 build [Randy Kobes]
  Have top-level 'nmake', 'nmake test', and 'nmake install'
  targets, respectively, also include building, testing, and
  installing the corresponding perl glue targets.

- C API [geoff]
  Minimum httpd version is now 2.0.48, which includes the official
  apr 0.9.4 release.

- C API [Max Kellermann]
  Fix apreq_quote.

- Perl API [joes]
  Remove Apache2::Request::args.  WARNING: through inheritance,
  args() now maps to Apache2::RequestRec::args.  Folks that want
  the pre-2.05-dev behavior need to invoke APR::Request::args by name.

- C API [joes, Max Kellermann]
  Add apreq_initialize, apreq_pre_initialize and apreq_post_initialize.
  These are not thread-safe operations, so applications need to ensure
  they are invoked (in the correct sequence) prior to using any apreq2
  modules.

- C, Perl API [joes]
  Add pool, bucket_alloc to apreq_handle_t.

- Perl API [joes]