@@ -29,6 +29,7 @@
 #include "apreq_private_apache2.h"
 #include "apreq_error.h"
 #include "apreq_util.h"
+#include "apreq_version.h"
 
 static void *apreq_create_dir_config(apr_pool_t *p, char *d)
 {
@@ -422,6 +423,11 @@ static int apreq_post_init(apr_pool_t *p, apr_pool_t *plog,
                            apr_pool_t *ptemp, server_rec *base_server)
 {
     apr_status_t status;
+
+    ap_add_version_component(p, apr_psprintf(p,
+                                             "mod_apreq2-%d/%s",
+                                             APREQ_APACHE2_MMN,
+                                             APREQ_VERSION_STRING));
 
     status = apreq_post_initialize(p);
     if (status != APR_SUCCESS) {
